# rsty-stack-example

./: .dockerignore  Dockerfile  README.md
.github/workflows/: docker-image.yml  rust.yml
todo_api/: Cargo.toml
todo_web/: .dockerignore  Dockerfile  rust-toolchain.toml
