[package]
name = "todo_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
tokio = { version = "1.42.0", features = ["full"] }
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.216", features = ["derive"] }
surrealdb = "2.1.3"
thiserror = "2.0.6"
